# vkrg

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateSln.bat  README.md
samples/: CMakeLists.txt
samples/common/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  DeferredPass.cpp  DeferredPass.h  DeferredShading.cpp  DeferredShading.h  Model.cpp  Model.h
samples/common/shaders/: camera.glsli  deferred.frag  deferred.frag.spv  deferred.vert  deferred.vert.spv  forward_culling.comp  forward_pre_depth.vert  forward_shading.frag  forward_shading.vert  light.glsli  mrt.frag  mrt.frag.spv  mrt.vert  mrt.vert.spv  multi_deferred.frag  pbr.glsli  tile.glsli  tile_counter_clear.comp  tile_culling.comp  tile_deferred.frag
samples/deferred/: App.cpp  CMakeLists.txt
samples/deferred_serialized/: App.cpp  CMakeLists.txt  DeferredPass.cpp  DeferredPass.h  DeferredShading.cpp  DeferredShading.h  graph.json  render graph syntax.md
samples/raytracing/: CMakeLists.txt  accumulate.comp  ao.rchit  ao.rgen  ao.rmiss  ao_common.glsli  rt.cpp
samples/tile_based_deferred/: CMakeLists.txt  ForwardPlus.cpp  Naive.cpp  Tiled.cpp
src/: CMakeLists.txt
src/vkrg/: common.h  compiler.h  dag.h  executor.h  graph.cpp  graph.h  pass.cpp  pass.h  prototypes.h  resource.cpp  resource.h
src/vkrg_src/: compiler.cpp  graph.cpp  pass.cpp  prototypes.cpp
tests/: CMakeLists.txt
tests/dag/: main.cpp
