file(GLOB DEFERRED_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB DEFERRED_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_executable(deferred ${DEFERRED_SOURCE} ${DEFERRED_HEADER} 
    ${VKRG_SAMPLE_COMMON_HEADER} ${VKRG_SAMPLE_COMMON_SOURCE})

target_include_directories(deferred PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${VKRG_SAMPLE_COMMON_DIRECTORIES})
target_link_libraries(deferred vkrg)